Set Gradle version of Java to 17. This matches Github Actions version of Java and fixes the build error.